<resources>
    <string name="app_name">iStetic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Seja bem-vindo!</string>
    <string name="nav_header_subtitle">cliente@cliente</string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_search">Buscar</string>
    <string name="menu_agenda">Verificar Agenda</string>
    <string name="menu_show_all">Mostrar Todos</string>
    <string name="menu_tools">Configurar</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_send">Recomendar</string>
    <string name="todo">TODO</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueci_minha_senha">Esqueceu sua senha?</string>
    <string name="n_o_possui_uma_conta">nao_possui_uma_conta</string>
    <string name="nao_possui_uma_conta">Não possui uma conta?</string>
    <string name="tab_text_1">Fornecedor</string>
    <string name="tab_text_2">Estabelecimento</string>
    <string name="title_activity_cadastro_fornecedor">CadastroFornecedor</string>

    <string name="preco">R$ 20,00</string>
    <string name="servico1">Depilação</string>
    <string name="servico2">Manicure</string>
    <string name="servico3">Limpeza de Pele</string>
    <string name="localizacao">Localização</string>
    <string name="estabelecimento">Lorem ipsum</string>
    <string name="aberto">Aberto</string>
    <string name="informacoes">Informações</string>
    <string name="preco_total">R$ 40,00</string>
    <string name="total_selecionado">Total Selecionado:</string>
    <string name="frase_calendario">Escolha Uma Data De Sua Preferência:</string>
    <string name="frase_relogio">Escolha um horário:</string>
    <string name="frase_conclusao_agendamento">Seu agendamento foi concluído com sucesso!
        Vá para o menu principal, e verifique a sua solicitação!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim sed
        faucibus turpis in eu mi bibendum neque egestas.</string>
    <string name="endereco">Endereço: Rua da Travessa, 512, Centro</string>
    <string name="atendimento">Atendimento: Seg à Sab, 8:00h-18:00h</string>
    <string name="frase_conclusao_edicao">Sua edição foi concluída com sucesso!
        Vá para o menu principal, e verifique a sua solicitação!</string>
    <string name="telefone">Contato:</string>
    <string name="numtelefone">(83)99890-4932</string>
    <string name="horario1">08:00 - 09:00</string>
    <string name="horario2">09:00 - 10:00</string>
    <string name="horario3">10:00 - 11:00</string>
    <string name="horario4">11:00 - 11:30</string>
    <string name="vaga">1 Vaga(s)</string>
    <string name="preenchido">Preenchido</string>
    <string name="data1">24/09/2019</string>
    <string name="data2">25/09/2019</string>

    <string name="frag_a">Fragmento 1 </string>
    <string name="frag_b">Fragmento 2 </string>
    <string name="frag_c">Fragmento 3 </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro_fornecedor">Fornecedor</string>
    <string name="cadastro_estabelecimento">Estabelecimento</string>
    <string name="cadastro_concluido">Concluído</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="titles_tab">
        <item>Tabela A</item>
        <item>Tabela B</item>
        <item>Tabela C</item>
    </string-array>
    <string name="title_activity_perfil_cliente">PerfilCliente</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
