<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"

    tools:ignore="Autofill">


    <Button
        android:id="@+id/entrar"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/entrar"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/entrar"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/esqueceuSenha"
        app:layout_constraintEnd_toEndOf="@+id/senha"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/senha"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        app:layout_constraintVertical_bias="0.32"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:background="#FF007F"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/cadastre_se"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="76dp"
        android:drawableStart="@drawable/mail"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="5dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="#425BB4"
        android:textColorHighlight="#80F1A8F1"
        android:textColorHint="#60425BB4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="5dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#425BB4"
        android:textColorHighlight="#80F1A8F1"
        android:textColorHint="#60425BB4"
        app:layout_constraintBottom_toTopOf="@+id/entrar"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:targetApi="jelly_bean" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/naoCadastrado"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esqueceuSenha"
        app:layout_constraintVertical_bias="0.46"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_marginTop="40dp"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/naoCadastrado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esqueceuSenha"
        app:layout_constraintVertical_bias="0.463"
        app:srcCompat="@drawable/google" />

    <LinearLayout
        android:id="@+id/imgretangulo"
        android:layout_width="0dp"
        android:layout_height="121dp"
        android:layout_gravity="center"
        android:background="@drawable/retangulo"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/imglogo"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:gravity="center_vertical"
            android:orientation="vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/esqueceuSenha"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="240dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center"
        android:text="@string/esqueci_minha_senha"
        android:textColor="#425BB4"
        android:textColorLink="#425BB4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <TextView
        android:id="@+id/naoCadastrado"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center"
        android:text="@string/nao_possui_uma_conta"
        android:textColor="#425BB4"
        android:textColorLink="#425BB4"
        app:layout_constraintBottom_toTopOf="@+id/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
